portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.14-14.build.log
15:14:48 **** Build of configuration Debug for project ex.14-14 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.14-14.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.14-14.d" -MT"ex.14-14.o" -o "ex.14-14.o" "../ex.14-14.cpp"
../ex.14-14.cpp:48:9: error: use of class template 'CPoint' requires template arguments
        CArray<CPoint> Ary3(CPoint(3,4));
               ^~~~~~
../ex.14-14.cpp:31:7: note: template is declared here
class CPoint {
      ^
../ex.14-14.cpp:48:29: error: expected parameter declarator
        CArray<CPoint> Ary3(CPoint(3,4));
                                   ^
../ex.14-14.cpp:48:29: error: expected ')'
../ex.14-14.cpp:48:28: note: to match this '('
        CArray<CPoint> Ary3(CPoint(3,4));
                                  ^
../ex.14-14.cpp:48:22: error: C++ requires a type specifier for all declarations
        CArray<CPoint> Ary3(CPoint(3,4));
                            ^
4 errors generated.
make: *** [ex.14-14.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:14:49 Build Failed. 5 errors, 0 warnings. (took 840ms)

